# tcp-bridge

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
config/: tcp_bridge_ajams.xml  tcp_bridge_amm.xml
src/: CMakeLists.txt  TCPBridgeMain.cpp
src/Net/: Server.cpp  Server.h  UdpDiscoveryServer.cpp  UdpDiscoveryServer.h
